--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -320,6 +320,18 @@ p.nData {
   --type-color: rgb(183, 155, 131);
 }
 
+.IlFootnote {
+  --type-color: #672129;
+}
+
+.Footnote {
+  --type-color: #c7606f;
+}
+
+.FootnoteContent {
+  --type-color: #ee2233;
+}
+
 
 @media (prefers-color-scheme: dark) {
   .container {
