--- a/src/article.module.css
+++ b/src/article.module.css
@@ -11,6 +11,7 @@
     --link-visited-color: rgb(117, 93, 222);
     --bq-highlight: rgb(0, 110, 255);
     --bq-background: rgb(249, 253, 255);
+    --font-size: 15px;
     color: var(--text-color);
     margin: 0 auto;
     margin-top: 1em;
