--- a/src/markdown.module.css
+++ b/src/markdown.module.css
@@ -2,9 +2,9 @@
     color: var(--text-color);
     margin-bottom: .3rem;
     margin-top: .3rem;
-    font-size: 14px;
+    font-size: var(--font-size);
     font-family: 'STIX Two Text', serif;
-    line-height: 20px;
+    line-height: calc(var(--font-size) * 1.4);
 }
 
 div.code {
@@ -13,13 +13,13 @@ div.code {
     border: 1px solid var(--code-border-color);
     border-radius: 7px;
     padding: .2rem;
-    line-height: 20px;
+    line-height: calc(var(--font-size) * 1.4);
     overflow-x: auto;
 }
 
 div.code > code > pre {
     color: var(--code-text-color);
-    font-size: 14px;
+    font-size: var(--font-size);
     font-family: 'Inconsolata', monospace;
 }
 
@@ -37,19 +37,19 @@ code.code {
 .ol {
     margin-top: .4rem;
     margin-bottom: .4rem;
-    font-size: 14px;
+    font-size: var(--font-size);
     padding-left: 1.5rem;
 }
 
 .ul {
     margin-top: .4rem;
     margin-bottom: .4rem;
-    font-size: 14px;
+    font-size: var(--font-size);
     padding-left: 1.5rem;
 }
 
 .li {
-    line-height: 1.4rem;
+    line-height: calc(var(--font-size) * 1.55);
     font-family: 'STIX Two Text', serif;
 }
 
@@ -60,26 +60,26 @@ code.code {
 
 .h1 {
     color: var(--title-text-color);
-    font-size: 30px;
+    font-size: calc(var(--font-size) * 2.2);
     font-family: 'STIX Two Text', serif;
     font-weight: 600;
 }
 
 .h2 {
-    font-size: 22px;
+    font-size: calc(var(--font-size) * 1.6);
     font-family: 'STIX Two Text', serif;
     padding-top: 4px;
 }
 
 .h3 {
-    font-size: 17px;
+    font-size: calc(var(--font-size) * 1.3);
     font-family: 'STIX Two Text', serif;
     padding-top: 2px;
     padding-bottom: 2px;
 }
 
 .h4 {
-    font-size: 15px;
+    font-size: calc(var(--font-size) * 1.1);
     font-family: 'STIX Two Text', serif;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -140,7 +140,7 @@ code.code {
     border-top: 1px solid gray;
     margin-top: 1em;
     margin-bottom: 1em;
-    font-size: 13px;
+    font-size: calc(var(--font-size) * 0.92);
     font-family: 'STIX Two Text', serif;
     padding-left: 2em;
     padding-top: .4em;
