less intrusive design

--- a/src/footer.module.css
+++ b/src/footer.module.css
@@ -1,6 +1,5 @@
 .footer {
-    background-color: #4d5152;
-    color: rgb(224, 231, 249);
+    color: rgb(102, 105, 111);
     border-radius: .6em;
     max-width: 600px;
     margin: 0 auto;
@@ -29,7 +28,7 @@ footer:hover {
     display: inline;
     padding-left: .4em;
     padding-right: .4em;
-    border-left: 1px solid #666;
+    border-left: 1px solid rgba(133, 133, 133, .4);
 }
 
 .list > li:first-child {
@@ -37,5 +36,11 @@ footer:hover {
 }
 
 .a {
-    color: rgb(187, 193, 209);
+    color: rgb(137, 142, 154);
+    text-decoration: none;
+}
+
+.a:hover {
+    color: rgb(161, 167, 180);
+    text-decoration: underline;
 }
