--- a/src/welcome.module.css
+++ b/src/welcome.module.css
@@ -1,6 +1,40 @@
 .container {
     background-color: black;
     color: white;
-    font-weight: 200;
+    font-weight: 400;
     font-family: 'Red Hat Display', sans-serif;
+    min-height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.btn {
+    background-color: rgb(0, 82, 189);
+    color: white;
+    font-weight: 400;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    padding: .7em 1em .7em 1em;
+    margin: .5em;
+    text-decoration: none;
+    border: 0;
+    border-radius: .5em;
+    cursor: pointer;
+    transition: .1s;
+    display: inline-block;
+}
+
+.btn:hover {
+    background-color: rgb(0, 110, 255);
+}
+
+.btn:active {
+    background-color: rgb(0, 50, 115);
+    transform: scale(.98);
+}
+
+.softHighlight {
+    background-color: rgba(185, 222, 255, 0.306);
 }
