--- a/src/welcome.module.css
+++ b/src/welcome.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    box-shadow: 0px 0px 20px -2px #0000006a, 0px 0px 6px -2px rgb(0, 0, 0);
 }
 
 .btn {
@@ -17,7 +18,7 @@
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     padding: .7em 1em .7em 1em;
-    margin: .5em;
+    margin: .8em .8em 0 0;
     text-decoration: none;
     border: 0;
     border-radius: .5em;
@@ -37,4 +38,10 @@
 
 .softHighlight {
     background-color: rgba(185, 222, 255, 0.306);
+}
+
+.block {
+    padding: 1em;
+    border-radius: 1em;
+    box-shadow: 0px 0px 20px -2px #ffffff6a, 0px 1px 5px -2px #fff;
 }
